# Bookeeper

./: .gitignore  .pylintrc  README.md  bookkeeper.db  database_test.db  pyproject.toml  результат анализа pylint.txt  результат анализа pytest.txt  результат-анализа-pylint.html  результат-анализа-pytest.html
bookkeeper/: bookkeeper.db  simple_client.py  stile.txt  utils.py
bookkeeper/models/: __init__.py  budget.py  category.py  expense.py
bookkeeper/repository/: abstract_repository.py  memory_repository.py  sqlite_repository.py
bookkeeper/view/: Main_window.py  budget_app.py  categories_tracker.py  expense_tracker.py
bookkeeper/view/.ipynb_checkpoints/: Main_window-checkpoint.py
tests/test_models/: test_budget.py  test_category.py  test_expense.py
tests/test_repository/: test_abstract_repository.py  test_memory_respository.py  test_sqlite_repository.py
tests/test_view/: test_budget_app.py  test_categories_tracker.py  test_expense_tracker.py  test_main_window.py
