[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
authors = ["Konstantin Stepovoi <stepovoi.ks@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pylint = "^3.1.0"
mypy = "^1.9.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 90
max-complexity = 10

